Split create ad form and make its parts reusable

--- a/src/client/src/components/first-ad-form/index.module.css
+++ b/src/client/src/components/first-ad-form/index.module.css
@@ -1,15 +1,13 @@
 .form {
-    text-align: center;
     margin-top: 20px;
     background-color: gray;
     width: 32%;
     margin: auto;
     border-radius: 20px;
     padding: 10px;
+    overflow: hidden;
 }
 
-.submit-button {
-    display: block;
-    margin: auto;
-    margin-top: 10px;
+.col-center {
+    text-align: center;
 }
