Add car details page

--- a/src/client/src/components/foundAd/index.module.css
+++ b/src/client/src/components/foundAd/index.module.css
@@ -9,3 +9,13 @@
 .info {
     font-size: 25px;
 }
+
+.wrapper {
+    text-decoration: none;
+    color: black;
+}
+
+.wrapper:hover {
+    text-decoration: none;
+    color: black;
+}
